--- a/style.css
+++ b/style.css
@@ -1,39 +1,29 @@
-div{
-    outline: 1px solid red;   
+div {
+  outline: 1px solid red;
 }
 
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-
-.odinlogo{
-
+.odinlogo {
+  position: relative;
+  background-color: rgba(1, 1, 1, 0.4);
+  font-family: Norse-Bold;
+  color: white;
 }
 
-.leftside{
-position: relative;
-}
-
-.leaf{
- height: 100%;
- position: absolute;
- width: auto;
-
-}
-
-#leaves{
-height: 100vh;
+.leaf {
+  height: 100vh;
 position: absolute;
 }
 
-#odinid{
-
-
+#leaves {
+  height: 100%;
 }
 
 @font-face {
-    font-family: Norse-Bold;
-    src:url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf)
+  font-family: Norse-Bold;
+  src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf);
 }
