--- a/style.css
+++ b/style.css
@@ -2,28 +2,179 @@ div {
   outline: 1px solid red;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.odinlogo {
-  position: relative;
-  background-color: rgba(1, 1, 1, 0.4);
-  font-family: Norse-Bold;
-  color: white;
-}
-
-.leaf {
-  height: 100vh;
-position: absolute;
-}
-
-#leaves {
-  height: 100%;
-}
-
 @font-face {
   font-family: Norse-Bold;
   src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf);
+}
+
+.leftcontainer{
+    position: relative;
+  
+}
+
+.leaf-image{
+    position: absolute;
+    max-width: 561px;
+    z-index: -1;
+}
+
+.odin-img{
+    height: max(90px,6vw);
+}
+.odin-body{
+    position: absolute;
+    width: min(561px, 100%);
+    min-height: 125px;
+    background-color: rgba(1, 1, 1, 0.6);
+    color: white;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 12rem;
+    font-family: Norse-Bold;
+    font-size: max(40px, 9vh);
+}
+
+.maincontainer{
+ 
+}
+
+.rightcontainer{
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    min-width: 30%;
+}
+
+
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
