--- a/style.css
+++ b/style.css
@@ -7,173 +7,68 @@ div {
   src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf);
 }
 
-.left-cont {
-  width: 40vw;
+body {
+  margin: 0 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.container {
+  height: 900px;
+  width: 100vw;
+  display: flex;
+
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.leftside {
   height: 100%;
+  width: 600px;
   position: relative;
 }
 
-.green-cont {
-  position: absolute;
-  width: 100%;
+.rightside {
   height: 100%;
+  width: 68%;
+  position: relative;
 }
 
-.leaves {
+.leafdiv {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  object-fit: cover;
+}
+
+.leafpic {
+  object-fit: cover;
+  min-height: 100%;
+
   width: 100%;
   z-index: -1;
+  position: absolute;
 }
 
-.black-cont {
-  z-index: 1;
-  position: absolute;
-  background: rgba(1, 1, 1, 0.6);
-  color: white;
-  font-family: Norse-Bold;
+.blackdiv {
   width: 100%;
+  height: max(50px, 15vh);
   margin-top: 22vh;
+  background: rgba(1, 1, 1, 0.7);
+  position: relative;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: max(32px, 10vh);
 }
 
-.odin-logo {
-  height: max(34px, 14vh);
-  margin-top: 10px;
-  margin-bottom: 10px;
+.odinpic {
+  height: 90%;
+  min-height: 40%;
 }
 
-/* .odin-div {
-  background-color: rgba(1, 1, 1, 0.6);
+.odintext {
+  color: white;
   font-family: Norse-Bold;
-} */
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+  font-size: max(20px, 10vh);
 }
