--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ div {
   src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf);
 }
 
+
 body {
   margin: 0 0;
   margin-left: 0;
@@ -114,3 +115,56 @@ body {
 .right-bottom {
   height: 300px;
 }
+
+.forms{
+padding-left: 50px;
+ width: auto;
+ display: flex;
+ margin-top: 30px;
+ align-items: space-evenly;
+ gap: 60px;
+}
+
+.leftforms, .rightforms{
+  display: flex;
+  flex-direction: column;
+  gap: 20px; 
+}
+
+#label{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 10px;
+  font-weight: 600;
+  letter-spacing: .12rem;
+  color: #222c3a;
+}
+
+input {
+  width: 225px;
+  height: 1.7rem;
+  font-family: Roboto, sans-serif;
+  border-color: #E5E7EB;
+  box-shadow: 0;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 6px;  
+}
+
+input:focus{  
+  outline-offset: 0px !important;
+  outline: none !important;
+  border: 1px solid #000EEE;
+  border-radius: 6px;  
+  height: 1.7rem; 
+  box-shadow: 1px 1px #888888;
+}
+
+.error{  
+  outline-offset: 0px !important;
+  outline: none !important;
+  border: 1px solid #ff0000;
+  border-radius: 6px;  
+  height: 1.5rem; 
+  box-shadow: 0px 0px;
+}
+
