--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ div {
   src: url(https://cdn.statically.io/gh/TheOdinProject/theodinproject/efdc2888072f409e687d31dc580595dbe4fe0ff4/app/assets/fonts/Norse-Bold.otf);
 }
 
-
 body {
   margin: 0 0;
   margin-left: 0;
@@ -18,15 +17,17 @@ body {
   height: 900px;
   width: 100vw;
   display: flex;
-
   margin-left: 0;
   margin-right: 0;
+  object-fit: cover;
 }
 
 .leftside {
   height: 100%;
-  width: 600px;
+  width: 45%;
   position: relative;
+  object-fit: cover;
+  z-index: 3;
 }
 
 .rightside {
@@ -45,7 +46,7 @@ body {
 .leafpic {
   object-fit: cover;
   min-height: 100%;
-
+  max-height: 100%;
   width: 100%;
   z-index: -1;
   position: absolute;
@@ -92,7 +93,7 @@ body {
   max-height: 250px;
 }
 
-.midtext{
+.midtext {
   padding-left: 50px;
   padding-top: 20px;
   padding-bottom: 0px;
@@ -100,71 +101,66 @@ body {
   font-size: 20px;
   font-weight: 500;
   font-family: "Roboto", sans-serif;
-  min-width: 350px; 
+  min-width: 800px;
   margin-top: 0;
   max-height: 10px;
- 
-  
 }
 
 .right-middle {
   height: 300px;
-  
 }
 
 .right-bottom {
   height: 300px;
 }
 
-.forms{
-padding-left: 50px;
- width: auto;
- display: flex;
- margin-top: 30px;
- align-items: space-evenly;
- gap: 60px;
+.forms {
+  padding-left: 50px;
+  width: auto;
+  display: flex;
+  margin-top: 30px;
+  align-items: space-evenly;
+  gap: 60px;
 }
 
-.leftforms, .rightforms{
+.leftforms,
+.rightforms {
   display: flex;
   flex-direction: column;
-  gap: 20px; 
+  gap: 20px;
 }
 
-#label{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+#label {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 10px;
   font-weight: 600;
-  letter-spacing: .12rem;
+  letter-spacing: 0.12rem;
   color: #222c3a;
 }
 
-input {
+.reginput {
   width: 225px;
   height: 1.7rem;
   font-family: Roboto, sans-serif;
-  border-color: #E5E7EB;
+  border-color: #e5e7eb;
   box-shadow: 0;
   border-style: solid;
   border-width: 1px;
-  border-radius: 6px;  
+  border-radius: 6px;
 }
 
-input:focus{  
+.reginput:focus {
   outline-offset: 0px !important;
   outline: none !important;
-  border: 1px solid #000EEE;
-  border-radius: 6px;  
-  height: 1.7rem; 
+  border: 1px solid #000eee;
+  border-radius: 6px;
+  height: 1.7rem;
   box-shadow: 1px 1px #888888;
 }
 
-.error{  
+.error{
   outline-offset: 0px !important;
   outline: none !important;
-  border: 1px solid #ff0000;
-  border-radius: 6px;  
-  height: 1.5rem; 
-  box-shadow: 0px 0px;
+  border: 1px solid #ff0000 !important;
 }
-
