--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-div {
+/* div {
   outline: 1px solid red;
-}
+} */
 
 @font-face {
   font-family: Norse-Bold;
@@ -32,7 +32,7 @@ body {
 
 .rightside {
   height: 100%;
-  width: 68%;
+  width: 55%;
   position: relative;
 }
 
@@ -77,8 +77,12 @@ body {
 
 .right-top {
   height: 300px;
-
+  background-color: #f9fafb;
   align-items: center;
+}
+
+.credittext {
+  position: absolute;
 }
 
 .toptext {
@@ -101,17 +105,20 @@ body {
   font-size: 20px;
   font-weight: 500;
   font-family: "Roboto", sans-serif;
-  min-width: 800px;
+  min-width: 700px;
   margin-top: 0;
   max-height: 10px;
 }
 
 .right-middle {
   height: 300px;
+  box-shadow: 0px 3px 5px 1px rgb(197, 192, 192);
 }
 
 .right-bottom {
-  height: 300px;
+  height: 270px;
+  background-color: #f9fafb;
+  margin-top: 10px;
 }
 
 .forms {
@@ -159,8 +166,67 @@ body {
   box-shadow: 1px 1px #888888;
 }
 
-.error{
+.error {
   outline-offset: 0px !important;
   outline: none !important;
   border: 1px solid #ff0000 !important;
+}
+
+.pwmatch {
+  height: 10px;
+  margin-left: 50px;
+  margin-top: 2px;
+  max-width: 150px;
+  color: #ff0000;
+  font-size: 10px;
+  font-family: sans-serif;
+}
+
+.botrt {
+  display: flex;
+  flex-direction: column;
+  margin-left: 55px;
+  margin-top: 25px;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.create {
+  width: 210px;
+  height: 50px;
+  outline-offset: 0px !important;
+  outline: none !important;
+  border: 0px solid;
+  border-radius: 6px;
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: #596d48;
+}
+
+.already {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+}
+
+.login {
+  color: #596d48;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.credittext {
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  margin-top: 62vh;
+  margin-left: 16vw;
+}
+
+.link1 {
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  text-decoration: underline;
 }
